<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_login_estudiantes_navigation"
    app:startDestination="@+id/menu_start_session_estudiante">

    <fragment
        android:id="@+id/menu_start_session_estudiante"
        android:name="com.example.semillerouniautonoma.view.inicio_logueados_estudiantes.Inicio_LogueadosFragment"
        android:label="@string/inicio_login_estudiante"
        tools:layout="@layout/fragment_inicio__logueados"/>
    <fragment
        android:id="@+id/nav_redes_estudiante_1"
        android:name="com.example.semillerouniautonoma.view.inicio_logueados_estudiantes.Proyectos_EstuFragment"
        android:label="@string/Proyectos_nuevos"
        tools:layout="@layout/fragment_estu_proyectos"/>
    <fragment
        android:id="@+id/nav_redes_estudiante_2"
        android:name="com.example.semillerouniautonoma.view.inicio_logueados_estudiantes.Productos_EstuFragment"
        android:label="@string/Productos"
        tools:layout="@layout/fragment_estu_productos"/>
    <fragment
        android:id="@+id/nav_redes_estudiante_3"
        android:name="com.example.semillerouniautonoma.view.publicaciones.PublicacionesInicioFragment"
        android:label="@string/publicacioes"
        tools:layout="@layout/fragment_publicacion_inicio"/>
    <fragment
        android:id="@+id/nav_redes_estudiante_4"
        android:name="com.example.semillerouniautonoma.view.inicio_logueados_estudiantes.eventosFragment"
        android:label="@string/Eventos"
        tools:layout="@layout/fragment_eventos"/>

    <!-- Informacion Adicional -->
    <fragment
        android:id="@+id/nav_ayuda_login"
        android:name="com.example.semillerouniautonoma.view.PreguntasFragment"
        android:label="@string/ayuda"
        tools:layout="@layout/fragment_preguntas"/>
    <fragment
        android:id="@+id/nav_copyright_login"
        android:name="com.example.semillerouniautonoma.view.CopyRightFragment"
        android:label="@string/copyright"
        tools:layout="@layout/fragment_copy_right"/>

</navigation>