<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.inicio_logueados_estudiantes.contacto_implicitoFragment"
    android:background="@color/texto_secundario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/azul_secundario">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:rotation="182"
                    android:layout_gravity="left"
                    android:src="@drawable/ic_baseline_double_arrow_24" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correo_docente"
                        android:textSize="18dp"
                        android:textColor="@color/azul_terceario"
                        android:layout_marginLeft="15dp"/>
                    <EditText
                        android:id="@+id/correo"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintcorreo_docente"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:inputType="textEmailAddress"
                        android:fontFamily="sans-serif"
                        android:layout_marginLeft="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tema_correo"
                        android:textSize="18dp"
                        android:textColor="@color/azul_terceario"
                        android:layout_marginLeft="15dp"/>
                    <EditText
                        android:id="@+id/tema"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hinttema"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:fontFamily="sans-serif"
                        android:layout_marginLeft="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion_correo"
                        android:textSize="18dp"
                        android:textColor="@color/azul_terceario"
                        android:layout_marginLeft="15dp"/>
                    <EditText
                        android:id="@+id/contenido"
                        android:layout_width="350dp"
                        android:layout_height="200dp"
                        android:layout_marginLeft="15dp"
                        android:hint="@string/hintdescripcion"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:fontFamily="sans-serif"
                        android:gravity="clip_vertical"/>
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/enviar"
                    android:backgroundTint="@color/dorado"
                    android:background="@drawable/estilo_texto"
                    android:layout_marginBottom="20dp"/>
                    </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_universidad"
                android:textColor="@color/azul_princpal"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_marginTop="180dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>