<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CopyRightFragment"
    android:background="@color/azul_secundario">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:id="@+id/imagennn"
            android:layout_width="300dp"
            android:layout_height="330dp"
            android:layout_gravity="center"
            android:src="@drawable/quime" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descrip_copyright"
            android:textColor="@color/color_letra"
            android:textStyle="italic"
            android:textSize="23dp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/texto"
            android:layout_width="260sp"
            android:layout_height="wrap_content"
            android:text="@string/titulo_universidad"
            android:textColor="@color/color_letra"
            android:textStyle="italic"
            android:textSize="23dp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/derechos"
            android:textColor="@color/color_letra"
            android:textStyle="italic"
            android:textSize="23dp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>
</FrameLayout>